--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	huynhtancuong/ADXL345@^1.0.2
 	adafruit/Adafruit AS7341@^1.4.1
 	arduino-libraries/Servo@^1.3.0
+	arduino-libraries/SD@^1.3.0
 monitor_speed = 115200
 monitor_eol = LF
 monitor_echo = yes
