Implementa logica di gestione linea e ostacoli
Introduce una nuova logica completa per la gestione della linea, inclusi i colori speciali, le interruzioni di linea e la rotazione a 180 gradi.

Gestisce il rilevamento di verde (singolo o doppio) e l'esecuzione delle manovre appropriate (svolta o rotazione).

Introduce una gestione degli ostacoli basata sul rilevamento di interruzioni della linea, con diverse strategie di recupero (ricerca del colore, retromarcia, ecc.).

Aumenta i valori di KP e KD per il PID line following per una risposta più precisa del robot.

Aggiunge la libreria Motori per la gestione del movimento del robot, con funzionalità di inizializzazione, movimento controllato e stop.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -291,5 +291,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "*.cpp.bak": "cpp"
-}
+},
+"cSpell.words": [
+  "ipch"
+]
 }
